[tool.poetry]
name = "pss"
version = "0.1.0"
description = ""
authors = ["Albin Stjerna <albin.stjerna@it.uu.se>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.45"
ipython = "^7.12"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
